@@ -1,6 +1,14 @@
 <?xml version="1.0"?>
 
+<!DOCTYPE bindings [
+<!ENTITY % tabBrowserDTD SYSTEM "chrome://browser/locale/tabbrowser.dtd" >
+%tabBrowserDTD;
+<!ENTITY % globalDTD SYSTEM "chrome://global/locale/global.dtd">
+%globalDTD;
+]>
+
 <bindings xmlns="http://www.mozilla.org/xbl"
+          xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
 	  xmlns:xbl="http://www.mozilla.org/xbl"
 	  xmlns:html="http://www.w3.org/1999/xhtml">
 
@@ -8,6 +16,23 @@
         <content>
             <div id="liberator-frame-indicator" style="width: 40px; height: 40px"/>
             <children/>
+        </content>
+    </binding>
+    <binding id="tab"
+             extends="chrome://browser/content/tabbrowser.xml#tabbrowser-tab">
+        <content chromedir="&locale.dir;"
+                 closetabtext="&closeTab.label;">
+            <xul:stack class="liberator-tab-stack">
+                <xul:image xbl:inherits="validate,src=image" class="tab-icon-image hl-TabIcon"/>
+                <xul:vbox>
+                    <xul:spring flex="1"/>
+                    <xul:label xbl:inherits="value=ordinal" class="hl-TabIconNumber"/>
+                    <xul:spring flex="1"/>
+                </xul:vbox>
+            </xul:stack>
+            <xul:label xbl:inherits="value=ordinal" class="hl-TabNumber"/>
+            <xul:label flex="1" xbl:inherits="value=label,crop,accesskey" class="tab-text hl-TabText"/>
+            <xul:toolbarbutton anonid="close-button" tabindex="-1" class="tab-close-button hl-TabClose"/>
         </content>
     </binding>
     <binding id="compitem-td">
