@@ -33,7 +33,7 @@ liberator.config = { //{{{
 
     /*** optional options, there are checked for existance and a fallback provided  ***/
     features: ["bookmarks", "hints", "history", "marks", "quickmarks", "session", "tabs", "windows"],
-    defaults: { guioptions: "" },
+    defaults: { guioptions: "N" },
     guioptions: { m: ["toolbar-menubar"], T: ["nav-bar"], b: ["PersonalToolbar"] },
 
     get visualbellWindow() getBrowser().mPanelContainer,
